--- a/static/sass/_forms.sass
+++ b/static/sass/_forms.sass
@@ -66,6 +66,7 @@ form
       @include display_flex()
       @include vendor-prefix('align-items', center)
       padding: 0
+
       &:hover
         background-color: #eee
 
@@ -125,6 +126,10 @@ fieldset
   list-style: none
   padding: 1em
   margin-bottom: 0
+
+  li
+    &:hover
+      background-color: #E06060
 
 .errorlist + p
   background-color: #EA9797
